--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "gh-pages": "^2.2.0"
+    "gh-pages": "^2.2.0",
+    "jest-cucumber": "^2.0.11"
   }
 }
