--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "gh-pages": "^2.2.0",
-    "jest-cucumber": "^2.0.11"
+    "jest-cucumber": "^2.0.11",
+    "puppeteer": "^2.1.1"
   }
 }
