--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,11 @@
       "src": "icon.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "meetup.png",
+      "type": "image/png",
+      "sizes": "1260x1260"
     }
   ],
   "start_url": ".",
