--- a/auth-server/serverless.yml
+++ b/auth-server/serverless.yml
@@ -66,6 +66,7 @@ functions:
       - http: 
           path: api/token/{code}
           method: get
+          cors: true # <-- CORS!
 
   refreshAccessToken:
     handler: handler.refreshAccessToken
@@ -73,6 +74,7 @@ functions:
       - http: 
           path: api/refresh/{code}
           method: get
+          cors: true # <-- CORS!
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
